--- a/packages/header/src/helperComponents/HeaderLayout/styles.modules.scss
+++ b/packages/header/src/helperComponents/HeaderLayout/styles.modules.scss
@@ -15,6 +15,7 @@
 
 .left {
   display: flex;
+  min-width: 0;
 }
 
 .right {
@@ -24,6 +25,7 @@
 .path {
   display: flex;
   align-items: center;
+  min-width: 0;
 }
 
 a.logo {
